--- a/src/scss/_Nav-Bars.scss
+++ b/src/scss/_Nav-Bars.scss
@@ -64,7 +64,7 @@
 
   .Nav-Bar {
     position: relative !important;
-    z-index: 0 !important;
+    //z-index: 0 !important;
   }
 }
 
@@ -75,7 +75,7 @@
 
   .Nav-Bar {
     position: relative !important;
-    z-index: 0 !important;
+    //z-index: 0 !important;
 
     .Nav-Bar-Title {
       justify-content: center !important;
